--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,6 @@
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -47,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
