--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "8.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2"
+    "jwt-decode": "^3.1.2",
+    "mongoose": "^8.3.2",
+    "nodemailer": "^6.9.6",
+    "stripe": "^13.9.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "concurrently": "^8.2.2"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
